css/stylesheet.css
/*basics styling*/
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}
html {
    width: 100vw;
    background-color: #EBEBEB;
}
body {
    width: 100%;
}

.row {
    display: flex;
    justify-content: space-around;
}
.container {
    width: 100%;
    height: auto;
}

/*header & nav*/
header {
    width: 100%;
    height: auto;
    background-color: #E30614;
}
header h4 {
    color: white;
    text-align: center;
    margin-top: 0;
    margin-bottom: 5px;
}
.sticky {
    position: fixed;
    top: 0;
}
nav {
    width: 100%;
    display: flex;
    justify-content: space-around;
    animation: none;
    
}
.navItem {
    padding-right: 5%;
    padding-left: 5%;
    margin-bottom: 0.4em;
    transition: background-color 0.5s;
    -webkit-transition: background-color 0.5s;
}
.navItem a {
    text-decoration: none;
    color: white;
}
.navItem:hover {
    background-color: #005da9;
}

.navItem h5 {
    margin-top: 2.5vh;
    margin-bottom: 2.5vh;
    font-family: 'Times New Roman', Times, serif;
}

/*carousel*/
.carousel-container{
    width: 100%;
    margin: auto;
    overflow: hidden;
    position: relative;
}
.carousel-slide{
    display: flex;
    width: 100%;
    max-height: 800px;
}
.carousel-slide img{
    max-width: 100vw;
    height: auto;
}
#prevBtn {
    position: absolute;
    top: 50%;
    z-index: 10;
    left: 1%;
    font-size: 2em;
    color: gray;
    opacity: 0.5;
    cursor: pointer;
    transition: color 0.5s, opacity 0.5s;
}
#nextBtn {
    position: absolute;
    top: 50%;
    z-index: 10;
    left: 98%;
    font-size: 2em;
    color: gray;
    opacity: 0.5;
    cursor: pointer;
    transition: color 0.5s, opacity 0.5s;
}
#prevBtn:hover, #nextBtn:hover {
    color: white;
    opacity: 1;
}

/*banner*/
.banner {
    display: block;
    width: 100%;
    background-color: dimgray;
}
.bannerImage {
    width: 100%;
    display: block;
}

main {
    display: block;
    width: 100%;
}

/*Page Title*/
.pageTitle {
    text-align: center;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    margin-right: auto;
    margin-left: auto;
}

/*frames*/
.frame {
    width: 30%;
    background-color: #005da9;
    height: auto;
    transition: background-color 2s;
    -webkit-transition: background-color 2s;
}
.frame:hover {
    background-color: #E30614;
    color: #EBEBEB
}
.frame a {
    color: inherit;
    text-decoration: none;
}
.frameTitle {
    height: 20%;
    text-align: center;
}
.frameTitle h3 {
    color: #EBEBEB;
    padding-top: 5%;
    margin-top: 0;
    margin-bottom: 1em;
}
.frameImage {
    display: block;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}
.frameImage img {
    display: block;
    width: 100%;
    height: auto;
    max-height: 300px;
}
.frame p {
    padding-left: 5%;
    padding-right: 5%;
    padding-bottom: 5%;
    text-align: center;
}

@media screen and (max-width: 700px) {
    #frames {
        display: block;
    }
    .frame {
        width: 80%;
        margin-top: 10px;
        margin-left: auto;
        margin-right: auto;
    }
}

/* collumn1/1 */
.collumn1-1 {
    padding: 5%;
} 

/* collumn1/2 */
.collumn1-2 {
    width: 40%;
}

/* collumn1/2 pageitems */
.imageItem {
    background-color: #E30614;
    padding: 0.5%;
}
.imageItem img {
    width: 100%;
    height: auto;
}
.textItem {
    padding: 1%;
    background-color: #005da9;
}

.itemTitle, .collumn1-2 p {
    margin: 1em 0.25em 1em 0.25em;
}

/*lists*/
ul {
    font-family: 'Open Sans', sans-serif;
}

/*footer*/
footer {
    width: 100%;
    height: auto;
    margin-top: 2em;
    background-color: #1B2021;
    color: #B7C9CD;
    display: flex;
    justify-content: space-around;
    align-items: center;

}
.footerColumn {
    flex-basis: 30%;
}
.footerColumn img {
    width: 100%;
    height: auto;
}
#footerMiddle ul {
    margin-top: 1em;
}

@media screen and (max-width: 800px) {
    footer {
        flex-direction: column;
        align-items: center;
    }
    .footerColumn {
        width: 100%;
        text-align: center;
    }
    .footerColumn ul {
        list-style-type: none;
    }
}

/*Animations*/
.enlarge {
    transition: transform .2s;
}
@media screen and (min-width: 601px){
    .frame:hover {
        transform: scale(1.25);
    }
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
}
@keyframes fade {
    from {opacity: .2}
    to {opacity: 1}
}
@-webkit-keyframes fade {
    from {opacity: .2}
    to {opacity: 1}
}

/*text */
h1, h3, h5 {
    font-family: 'Roboto', sans-serif;
}
h2, h4, h6, p {
    font-family: 'Open Sans', sans-serif;
}

h1 {
    font-size: 4em;
    font-weight: 700;
}
h2 {
    font-size: 3em;
    font-weight: 600;
}
h3 {
    font-size: 2em;
    font-weight: 600;
}
h4 {
    font-size: 1.5em;
    font-weight: 600;
}
h5 {
    font-size: 1.25em;
    font-weight: 700;
}
h6 {
    font-size: 1.25em;
    font-weight: 800;
}

